# release-pls-plz

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/release-please/: config.json  manifest.json
.github/workflows/: release-plz.yaml  release.yaml
core/: .gitignore  CHANGELOG.md  Cargo.toml  cliff.toml  release-plz.toml
core/bins/: CHANGELOG.md
core/bins/core-bin-1/: CHANGELOG.md  Cargo.toml
core/bins/core-bin-1/src/: main.rs
core/bins/core-bin-2/: CHANGELOG.md  Cargo.toml
core/core-test-1/: CHANGELOG.md  Cargo.toml
core/core-test-2/: CHANGELOG.md  Cargo.toml
core/core-test-2/src/: main.rs
core/libs/: CHANGELOG.md
core/libs/core-test-1/: CHANGELOG.md  Cargo.toml
core/libs/core-test-2/: CHANGELOG.md  Cargo.toml
core/libs/core-test-3/: CHANGELOG.md  Cargo.toml
prover/: CHANGELOG.md  Cargo.toml  release-plz.toml
prover/libs/prover-lib-1/: CHANGELOG.md  Cargo.toml
prover/libs/prover-lib-2/: CHANGELOG.md  Cargo.toml
